# subs

./: .editorconfig  .gitignore  Cargo.toml  README.md
src/: main.rs  options.rs  socket.rs  subprocesses.rs  watch.rs
src/manager/: mod.rs  none.rs  socket.rs  watch.rs
test/five/: index.js  package-lock.json  package.json
test/five/application/: package.json
test/four/application/: index.js  package-lock.json  package.json
test/one/: package.json
test/one/application/: index.js  package-lock.json  package.json
test/three/: index.js  package-lock.json  package.json
test/three/application/: package.json
test/two/application/: index.js  package-lock.json  package.json
