[package]
description = "Run a command simultaneously in every subdirectory, and manage with a socket."
license = "GPL-3.0+"
authors = ["chee <chee@snoot.club>"]
edition = "2018"
name = "subs"
version = "0.1.5"
repository = "https://git.snoot.club/chee/subs"
readme = "README.md"

[dependencies]
getopts = "0.2"
regex = "1"
notify = "4"
