[package]
description = "Run a command simultaneously in every subdirectory, and manage with a socket."
license = "GPL-3.0+"
authors = ["chee <yay@chee.party>"]
edition = "2018"
name = "subs"
version = "0.2.0"
repository = "https://github.com/chee/subs"
readme = "README.md"

[dependencies]
getopts = "0.2"
regex = "1"
notify = "4"
